<resources>

    <string name="app_name" translatable="false">Peluqueria</string>
    <string name="tv_signin">Sign In</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_login">Falló la creación de usuario</string>
    <string name="msg_fallo_registro">Falló la auntenticación del usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cita">Citas</string>
    <string name="menu_catalogo">Catalogo</string>
    <string name="menu_ubicacion">Ubicacion</string>
    <string name="title_activity_prueba">Prueba</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del cliente</string>
    <string name="msg_correo">Correo del cliente</string>
    <string name="msg_telefono">Telefono del cliente</string>
    <string name="msg_fecha">Fecha de la cita</string>
    <string name="msg_hora">Hora de la cita</string>
    <string name="msg_estilista">Estilista que atiende</string>
    <string name="msg_monto">Monto de pago</string>
    <string name="bt_agregar">Agregar cita</string>
    <string name="bt_updateCita">Actualizar cita</string>
    <string name="bt_pagarCita">Pagar cita</string>
    <string name="msg_imagen">Imagen</string>
    <string name="todo">Ubicacion Peluquería</string>
    <string name="msg_datos" translatable="false">Datos</string>

    <string name="msg_cita_added" />
    <string name="msg_data" />
    <string name="delete">Eliminar Cita</string>
    <string name="seguroBorrar">Esta seguro de borrar la cita </string>
    <string name="si">"Si "</string>

</resources>