<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vistaFila"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_telefono"
        android:layout_width="match_parent"
        android:layout_height="185dp">

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/msg_nombre"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
            tools:layout_editor_absoluteX="9dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:text="@string/msg_correo"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.244"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />

        <TextView
            android:id="@+id/tv_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/msg_telefono"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_correo" />

        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/msg_fecha"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_telefono" />

        <TextView
            android:id="@+id/tv_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/msg_hora"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_fecha" />

        <TextView
            android:id="@+id/tv_estilista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/msg_estilista"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_hora" />

        <TextView
            android:id="@+id/tv_monto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/msg_monto"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_estilista" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>